# Damas_Brasil

./: CMakeLists.txt  README.MD  checkerboard.cpp  checkerboard.h  create_deb.sh  damas_ai.cpp  damas_ai.hpp  damas_core.cpp  damas_core.hpp  lib-engine_1.4_amd64.deb  main.cpp  makefile  moc_checkerboard.cpp  resources.qrc
lib-engine_1.4_amd64/DEBIAN/: control  postinst  preinst
lib-engine_1.4_amd64/opt/lib-engine/: lib_engine
lib-engine_1.4_amd64/usr/share/applications/: lib-engine.desktop
salve/: muralha.fen  muralha_2.fen  tablita.pdn
